kyverno/polices/01-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root
  annotations:
    policies.kyverno.io/title: Require Run As Non-Root User and Group in namespaces default, user1 and user2
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kyverno-version: 1.13.1
    kyverno.io/kubernetes-version: "1.22-1.32"
    policies.kyverno.io/description: >-
      Containers must be required to run as non-root users and groups. This policy ensures
      `runAsUser` and `runAsGroup` is either unset or set to a number greater than zero.      
spec:
  background: false
  rules:
    - name: run-as-non-root-user
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespaces:
              - default
              - user1
              - user2
            operations:
              - CREATE
              - UPDATE
      validate:
        failureAction: Enforce
        message: >-
          Running as root is not allowed. The fields spec.securityContext.runAsUser,
          spec.containers[*].securityContext.runAsUser, spec.initContainers[*].securityContext.runAsUser,
          and spec.ephemeralContainers[*].securityContext.runAsUser must be
          set to a number greater than zero.
        pattern:
          spec:
            =(securityContext):
              =(runAsUser): ">0"
            =(ephemeralContainers):
            - securityContext:
                runAsUser: ">0"
            =(initContainers):
            - securityContext:
                runAsUser: ">0"
            =(containers):
            - securityContext:
                runAsUser: ">0"
    - name: run-as-non-root-group
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespaces:
              - default
              - user1
              - user2
            operations:
              - CREATE
              - UPDATE
      validate:
        failureAction: Enforce
        message: >-
          Running as root is not allowed. The fields spec.securityContext.runAsGroup,
          spec.containers[*].securityContext.runAsGroup, spec.initContainers[*].securityContext.runAsGroup,
          and spec.ephemeralContainers[*].securityContext.runAsGroup must be
          set to a number greater than zero.
        pattern:
          spec:
            =(securityContext):
              =(runAsGroup): ">0"
            =(ephemeralContainers):
            - securityContext:
                runAsGroup: ">0"
            =(initContainers):
            - securityContext:
                runAsGroup: ">0"
            =(containers):
            - securityContext:
                runAsGroup: ">0"
