kyverno/polices/04-project-insert-imagepoolsecret.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: project-insert-imagepoolsecret
  annotations:
    policies.kyverno.io/title: Project 1. Insert iamgepoolsecret
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.22-1.32"
    kyverno.io/kyverno-version: 1.13.1
    policies.kyverno.io/description: >-
      Copy docker-registry secret from tamplate to project.
spec:
  rules:
  - name: insert-magepoolsecret
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - "user*"
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - <(image): "lunar.kryukov.biz:10443/kyverno/*"
          imagePullSecrets:
          - name: registry
